--- a/html/materiales.html
+++ b/html/materiales.html
@@ -19,7 +19,7 @@
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="materiales.html">Materiales</a></li>
             <li><a href="programacion.html">Programacion</a></li>
-            <li><a href="">Montaje</a></li>
+            <li><a href="montaje.html">Montaje</a></li>
             <li><a href="">Código de Activación</a></li>
             <li>
                 <button id="buscarapa">Buscar</button>
@@ -67,26 +67,24 @@
 
 <body>
     <h1 id="titulo">Materiales</h1>
-    <p id="subtitulo">Estos son los materiales que hemos usado para hacer la maquina.</p>
+    <p id="subtitulo">Estos son los materiales/componentes de la maquina.</p>
     <div class="pagina">
         <div class="materiales">
             <img src="../image/arduinouno.jpg" alt="">
             <h3>Arduino Uno</h3>
-            <p>Esto es un mini controlador, sirve para controlar los dispositivos por codigo.</p>
+            <p>Esto es un mini controlador, sirve para controlar los componentes por codigo.</p>
             <a href="https://www.amazon.es/Arduino-UNO-A000066-microcontrolador-ATmega328/dp/B008GRTSV6/ref=sr_1_1_sspa?__mk_es_ES=ÅMÅŽÕÑ&crid=1ISNDIYYY95KJ&keywords=arduino+uno&qid=1684877026&sprefix=arduino+uno%2Caps%2C88&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1" class="boton-oculto">Ver Amazon</a>
         </div>
         <div class="materiales">
             <img src="../image/servomotor.jpg" alt="">
             <h3>Servo motores 360º</h3>
-            <p>Estos servo motores de 360º nos han servido para hacer que el articulo seleccionado por el usuario sea
-                posible entregarlo.</p>
+            <p>Los Servo motores sirven para empujar el articulo seleccionado por el usuario</p>
             <a href="https://www.amazon.es/Servomotor-rotación-Motorreductor-aeronaves-automóviles/dp/B08RMYN6Z1/ref=sr_1_9?keywords=servomotor+arduino+360+grados&qid=1684877149&sprefix=servo+motor+arduino+%2Caps%2C80&sr=8-9" class="boton-oculto">Ver Amazon</a>   
         </div>
         <div class="materiales">
             <img src="../image/keypad4x4.jpg" alt="">
             <h3>Keypad 4x4</h3>
-            <p>Este keypad 4x4 nos has servido para seleccionar la opcion que quiere el usuario, ingresar
-                codigos/contraseña, seleccionar usuarios etc.</p>
+            <p>El keypad sirve para que el usuario introduzca el codigo para seleccionar el articulo</p>
                 <a href="https://www.amazon.es/AZDelivery-colección-teclado-numérico-incluido/dp/B08B3JR8W9/ref=sr_1_1_sspa?keywords=keypad+arduino&qid=1684877205&sprefix=keypad+%2Caps%2C86&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1&smid=A1X7QLRQH87QA3" class="boton-oculto">Ver Amazon</a>   
         </div>
         <div class="materiales">
@@ -106,7 +104,7 @@
         <div class="materiales">
             <img src="../image/resistencias.jpg" alt="">
             <h3>Resistencias</h3>
-            <p>Las resistencias nos sirven para el LCD.</p>
+            <p>Las resistencias sirven para el LCD.</p>
             <a href="https://www.amazon.es/AUKENIEN-Resistencias-Valores-Resistencia-Película/dp/B09W682JMK/ref=sr_1_3?__mk_es_ES=ÅMÅŽÕÑ&crid=23OMCBKZWX4UW&keywords=resistencias+arduino+AUKENIEN&qid=1684877460&sprefix=resistencias+arduino+aukenien%2Caps%2C72&sr=8-3" class="boton-oculto">Ver Amazon</a>  
         </div>
         <div class="materiales">
@@ -118,7 +116,7 @@
         <div class="materiales">
             <img src="../image/fuentedealimentacion.jpg" alt="">
             <h3>Fuente de Alimentación</h3>
-            <p>Esta Fuente de Alimentacion ha servido para alimentar a todos los componentes de la maquina.</p>
+            <p>Esta es la Fuente de Alimentacion que da energia para todo el circuito.</p>
             <a href="https://www.amazon.es/Unyka-Fuente-FSX-Micro-450W/dp/B07JFQZWQN/ref=sr_1_4?__mk_es_ES=ÅMÅŽÕÑ&crid=HXBWJIKEX3LH&keywords=sfx+fuente+de+alimentacion&qid=1684877568&sprefix=sfx+fuente+de+alimentacion%2Caps%2C80&sr=8-4" class="boton-oculto">Ver Amazon</a>  
         </div>
         <div class="materiales">
@@ -130,46 +128,16 @@
         <div class="materiales">
             <img src="../image/alambrejpg" alt="">
             <h3>Alambre</h3>
-            <p>El alambre es para los servo motores para empujar el articulo</p>
+            <p>Alambre para empujar el articulo seleccionado por el usuario.</p>
         </div>
         <div class="materiales">
             <img src="../image/madera.jpg" alt="">
             <h3>Estructura</h3>
-            <p>Este es el material que hemos hecho la estructura de la maquina</p>
-            <a href="https://www.amazon.es/AZDelivery-Jumper-Arduino-Raspberry-Breadboard/dp/B07KKJ69DV/ref=sr_1_1_sspa?__mk_es_ES=ÅMÅŽÕÑ&crid=IWPD58042RBM&keywords=cable+arduino&qid=1684877595&sprefix=cable+arduino%2Caps%2C85&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1&smid=A1X7QLRQH87QA3" class="boton-oculto">Ver Amazon</a>  
+            <p>El material con que se ha construido la estructura de la maquina</p>
+            <a href="https://www.amazon.es/OWLKELA-Tablero-2mm-Hojas-Madera-Manualidades/dp/B0B4VSCY51?pd_rd_w=InR8a&content-id=amzn1.sym.39a0530e-cdee-46be-8da1-bcc874e212f9&pf_rd_p=39a0530e-cdee-46be-8da1-bcc874e212f9&pf_rd_r=66GXZ5YYD7RXJ7J1HN3D&pd_rd_wg=CFWlx&pd_rd_r=9b83d490-dee7-4904-88c3-34c9fd326104&pd_rd_i=B0B4VSCY51&psc=1&ref_=pd_bap_d_grid_rp_0_1_ec_i" class="boton-oculto">Ver Amazon</a>  
         </div>
     </div>
-    <h1 id="titulo">Herramientas</h1>
-    <p id="subtitulo">Estas son las herramientas que hemos utilizado.</p>
-    <div class="pagina">
-        <div class="herramientas">
-            <img src="../image/pistola.jpg" alt="">
-            <h3>Pistola de Silicona</h3>
-            <p>Para reforzar la estructura o los cables para que no se suelten</p>
-        </div>
-        <div class="herramientas">
-            <img src="../image/destornillador_elec.jpg" alt="">
-            <h3>Destornillador Electrico</h3>
-            <p>Para atornillar y hacer agujeros</p>
-        </div>
-        <div class="herramientas">
-            <img src="../image/alicates.jpg" alt="">
-            <h3>Alicates</h3>
-            <p>Para cortar el alambre</p>
-        </div>
-        <div class="herramientas">
-            <img src="../image/pinzas de punta.jpg" alt="">
-            <h3>Pinzas de punta</h3>
-            <p></p>
-        </div>
-        <div class="herramientas">
-            <img src="../image/soldador.jpg" alt="">
-            <h3>Soldador</h3>
-            <p>Soldar cables</p>
-        </div>
-    </div>
-    
-    <p id="subtitulo">Estos son todos los materiales y herramientas que hemos necesitado para construir la maquina.</p>
+    <p id="subtitulo">Estos son los materiales con que se ha construido la maquina.</p>
     <div class="boton">
         <a href="">Montaje</a>
     </div>
