--- a/html/materiales.html
+++ b/html/materiales.html
@@ -18,9 +18,9 @@
         <ul id="nav">
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="materiales.html">Materiales</a></li>
-            <li><a href="programacion.html">Programacion</a></li>
+            <li><a href="programacion.html">Programación</a></li>
             <li><a href="montaje.html">Montaje</a></li>
-            <li><a href="">Código de Activación</a></li>
+            <li><a href="codigodeactivacion.html">Código de Activación</a></li>
             <li>
                 <button id="buscarapa">Buscar</button>
             </li>
@@ -67,12 +67,12 @@
 
 <body>
     <h1 id="titulo">Materiales</h1>
-    <p id="subtitulo">Estos son los materiales/componentes de la maquina.</p>
+    <p id="subtitulo">Estos son los materiales/componentes de la máquina.</p>
     <div class="pagina">
         <div class="materiales">
             <img src="../image/arduinouno.jpg" alt="">
             <h3>Arduino Uno</h3>
-            <p>Esto es un mini controlador, sirve para controlar los componentes por codigo.</p>
+            <p>Esto es un mini controlador, sirve para controlar los dispositivos por código.</p>
             <a href="https://www.amazon.es/Arduino-UNO-A000066-microcontrolador-ATmega328/dp/B008GRTSV6/ref=sr_1_1_sspa?__mk_es_ES=ÅMÅŽÕÑ&crid=1ISNDIYYY95KJ&keywords=arduino+uno&qid=1684877026&sprefix=arduino+uno%2Caps%2C88&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1" class="boton-oculto">Ver Amazon</a>
         </div>
         <div class="materiales">
@@ -84,7 +84,7 @@
         <div class="materiales">
             <img src="../image/keypad4x4.jpg" alt="">
             <h3>Keypad 4x4</h3>
-            <p>El keypad sirve para que el usuario introduzca el codigo para seleccionar el articulo</p>
+            <p>El keypad sirve para que el usuario introduzca el código para seleccionar el articulo</p>
                 <a href="https://www.amazon.es/AZDelivery-colección-teclado-numérico-incluido/dp/B08B3JR8W9/ref=sr_1_1_sspa?keywords=keypad+arduino&qid=1684877205&sprefix=keypad+%2Caps%2C86&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1&smid=A1X7QLRQH87QA3" class="boton-oculto">Ver Amazon</a>   
         </div>
         <div class="materiales">
@@ -97,7 +97,7 @@
         <div class="materiales">
             <img src="../image/i2clcd.jpg" alt="">
             <h3>I2C Display LCD</h3>
-            <p>Es un complemento para el componente LCD que sirve para hacer las conexiones con menos cables y mas
+            <p>Es un complemento para el componente LCD que sirve para hacer las conexiones con menos cables y más
                 fácil.</p>
                 <a href="https://www.amazon.es/AZDelivery-HD44780-visualización-16-caracteres-Schnittstelle/dp/B01MFB4743/ref=sr_1_4?__mk_es_ES=ÅMÅŽÕÑ&crid=3MD4NBCK0VVW7&keywords=i2c+lcd+arduino&qid=1684877363&sprefix=i2c+lcd+arduino+%2Caps%2C67&sr=8-4" class="boton-oculto">Ver Amazon</a>  
         </div>
@@ -110,13 +110,13 @@
         <div class="materiales">
             <img src="../image/protoboard.jpg" alt="">
             <h3>Protoboard</h3>
-            <p>El protoboard sirve para sacar mas pines con solamente un pin.</p>
+            <p>El protoboard sirve para sacar más pines con solamente un pin.</p>
             <a href="https://www.amazon.es/dp/B07K8PQ4B5/ref=twister_B082MNBXQ4?_encoding=UTF8&psc=1" class="boton-oculto">Ver Amazon</a>  
         </div>
         <div class="materiales">
             <img src="../image/fuentedealimentacion.jpg" alt="">
             <h3>Fuente de Alimentación</h3>
-            <p>Esta es la Fuente de Alimentacion que da energia para todo el circuito.</p>
+            <p>Esta es la Fuente de Alimentación que da energía para todo el circuito.</p>
             <a href="https://www.amazon.es/Unyka-Fuente-FSX-Micro-450W/dp/B07JFQZWQN/ref=sr_1_4?__mk_es_ES=ÅMÅŽÕÑ&crid=HXBWJIKEX3LH&keywords=sfx+fuente+de+alimentacion&qid=1684877568&sprefix=sfx+fuente+de+alimentacion%2Caps%2C80&sr=8-4" class="boton-oculto">Ver Amazon</a>  
         </div>
         <div class="materiales">
@@ -128,18 +128,18 @@
         <div class="materiales">
             <img src="../image/alambrejpg" alt="">
             <h3>Alambre</h3>
-            <p>Alambre para empujar el articulo seleccionado por el usuario.</p>
+            <p>Alambre para empujar el artículo seleccionado por el usuario.</p>
         </div>
         <div class="materiales">
             <img src="../image/madera.jpg" alt="">
             <h3>Estructura</h3>
-            <p>El material con que se ha construido la estructura de la maquina</p>
+            <p>El material con que se ha construido la estructura de la máquina</p>
             <a href="https://www.amazon.es/OWLKELA-Tablero-2mm-Hojas-Madera-Manualidades/dp/B0B4VSCY51?pd_rd_w=InR8a&content-id=amzn1.sym.39a0530e-cdee-46be-8da1-bcc874e212f9&pf_rd_p=39a0530e-cdee-46be-8da1-bcc874e212f9&pf_rd_r=66GXZ5YYD7RXJ7J1HN3D&pd_rd_wg=CFWlx&pd_rd_r=9b83d490-dee7-4904-88c3-34c9fd326104&pd_rd_i=B0B4VSCY51&psc=1&ref_=pd_bap_d_grid_rp_0_1_ec_i" class="boton-oculto">Ver Amazon</a>  
         </div>
     </div>
-    <p id="subtitulo">Estos son los materiales con que se ha construido la maquina.</p>
+    <p id="subtitulo">Estos son los materiales con que se ha construido la máquina.</p>
     <div class="boton">
-        <a href="">Montaje</a>
+        <a href="montaje.html">Montaje</a>
     </div>
 
 </body>
@@ -150,11 +150,11 @@
     </div>
     <div class="columna" id="columna2">
         <ul>
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Materiales</a></li>
-            <li><a href="">Programacion</a></li>
-            <li><a href="">Montaje</a></li>
-            <li><a href="">Código de Activación</a></li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="materiales.html">Materiales</a></li>
+            <li><a href="programacion.html">Programación</a></li>
+            <li><a href="montaje.html">Montaje</a></li>
+            <li><a href="codigodeactivacion.html">Código de Activación</a></li>
         </ul>
     </div>
 </footer>
